feat: add pagination

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
   --white-color: #ffffff;
   --light-color: #F8F8F8;
   --bright-color: #E0A449;
+  --gray-color: #cfcfcf;
+  --turquoise-color: #3e7e96;
 }
 
 body {
