--- a/src/pages/PaintingList/PaintingList.module.css
+++ b/src/pages/PaintingList/PaintingList.module.css
@@ -11,11 +11,22 @@
   grid-auto-rows: 560px;
   column-gap: 5vw;
   margin: 40px 0;
+  transition: opacity 0.3s ease;
 }
 
-.paginationControls {
-  margin-top: 20px;
+.loading {
+  opacity: 0.3;
+}
+
+.loaderOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  z-index: 10;
 }
