--- a/src/components/PaintingCard/PaintingCard.module.css
+++ b/src/components/PaintingCard/PaintingCard.module.css
@@ -21,6 +21,7 @@
   max-width: 100%;
   max-height: 70%;
   object-fit: contain;
+  cursor: pointer;
 }
 
 .paintingInfo {
@@ -55,4 +56,9 @@
 .icon {
   display: flex;
   justify-content: flex-end;
+}
+
+.link {
+  text-decoration: none;
+  color: inherit;
 }
