--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -11,6 +11,18 @@
   gap: 16px;
 }
 
+.burgerIcon {
+  display: none;
+  cursor: pointer;
+  width: 32px;
+  height: 32px;
+}
+
+.nav {
+  display: flex;
+  flex-direction: row;
+}
+
 .link {
   display: flex;
   flex-direction: row;
@@ -33,4 +45,49 @@
   margin-right: 4px;
   width: 24px;
   height: 24px;
+}
+
+@media (max-width: 480px) {
+  .header {
+    padding: 20px 7vw;
+  }
+
+  .burgerIcon {
+    display: block;
+    position: relative;
+    z-index: 1000;
+  }
+
+  .nav {
+    display: none;
+  }
+
+  .navOpen {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 999;
+    animation: fade-in 0.3s ease-out;
+  }
+
+  .mobileLogo {
+    width: 103px;
+    height: 31px;
+  }
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
