--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -3,12 +3,6 @@
   margin: 20px 0;
 }
 
-.paginationRoot {
-  display: flex;
-  margin-top: 20px;
-  gap: 10px;
-}
-
 .paginationControl {
   justify-content: center;
   align-items: center;
@@ -36,4 +30,25 @@
   margin: 0 5px;
   font-size: 32px; 
   color: var(--gray-color);
+}
+
+@media (max-width: 480px) {
+  .paginationContainer {
+    max-width: 100vw;
+  }
+
+  .paginationControl {
+    padding: 10px;
+    margin: 0 3px;
+  }
+
+  .dots {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 429px) {
+  .paginationControl {
+    font-size: 10px;
+  }
 }
