--- a/src/components/PaintingDetails/PaintingDetails.module.css
+++ b/src/components/PaintingDetails/PaintingDetails.module.css
@@ -70,3 +70,20 @@
   bottom: 10px;
   right: 10px;
 }
+
+@media (max-width: 480px) {
+  .mainContainer {
+    width: 100%;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 400px;
+    row-gap: 20px; 
+    column-gap: 0;
+    margin: 20px 0;
+    padding: 0px 5vw 100px;
+    box-sizing: border-box;
+  }
+
+  .descriptionContainer {
+    row-gap: 10px;
+  }
+}
